<resources>
    <!-- COMMON -->
    <string name="app_name">GeoLoc &amp; QR Code</string>

    <string name="permRationale_title">Autorisation necessaire</string>
    <string name="permRationale_posBtn">OK</string>
    <string name="permRationale_negBtn">Annuler</string>

    <string name="gotoQrCodeActivity">QR Code</string>
    <string name="gotoGeoLocActivity">GeoLoc</string>

    <string name="error_odoo_server_error">Odoo Server Error</string>
    <!-- MAIN ACTIVITY -->
    <string name="coordinatesLabel_onGranted">Voici les coordonnées GPS de votre position</string>
    <string name="coordinatesLabel_onDenied">La localisation GPS est désactivée</string>
    <string name="coordinatesLabel_onWait">Veuillez patienter …</string>

    <string name="longLabel">Longitude</string>
    <string name="latLabel">Latitude</string>

    <string name="rdtroniclogoBg_contentDescription">bg_rdtronicLogo</string>
    <string name="rdtroniclogo_contentdescription">rdtroniclogo</string>

    <string name="locPermReqBtn">Autoriser l\'utilisation de la localisation de l\'appareil</string>
    <string name="locPermRationale_msg">GeoLoc à besoin d\'accéder à votre position afin de pouvoir fonctionner.</string>
    <string name="locPermissionDenied_toastText">Votre localisation ne sera pas utilisée. Celle-ci est nécessaire au bon fonctionnement de l\'application</string>
    <string name="locPermissionGranted_toastText">GeoLoc utilise votre position</string>

    <!-- QR CODE READER ACTIVITY -->
    <string name="camPermReqBtn">Autoriser l\'utilisation de la caméra de l\'appareil</string>
    <string name="camPermRationale_msg">GeoLoc à besoin d\'accéder à votre caméra pour réaliser le scan du QR Code.</string>
    <string name="camPermissionDenied_toastText">Votre caméra ne sera pas utilisée. Celle-ci est nécessaire afin de scanner le QR Code</string>
    <string name="camPermissionGranted_toastText">QR Code Reader utilise votre caméra</string>

    <!-- DATA RETRIEVER ACTIVITY -->
    <string name="dataRetrievedLabel">Données du QR Code :</string>

</resources>