<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/appTitle_marginTop"

        android:text="@string/app_name"
        android:textSize="@dimen/appTitle_fontSize"
        />

    <TextView
        android:id="@+id/coordinatesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        android:layout_marginTop="@dimen/coordinatesLabel_marginTop"

        android:text="@string/coordinatesLabel_onGranted"
        android:textSize="@dimen/coordinatesLabel_fontSize"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/longLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coordinatesLabel"
        android:layout_marginStart="@dimen/longAndLatLabel_marginLeft"
        android:layout_marginTop="@dimen/longLabel_marginTop"

        android:text="@string/longLabel"
        android:textSize="@dimen/coordinatesLabel_fontSize"
        />

    <TextView
        android:id="@+id/longCoordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toRightOf="@id/longLabel"
        app:layout_constraintTop_toTopOf="@id/longLabel"
        app:layout_constraintBottom_toBottomOf="@id/longLabel"
        android:layout_marginStart="@dimen/coordinates_marginLeft"

        android:textSize="@dimen/coordinates_fontSize"
        />

    <TextView
        android:id="@+id/latLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/longLabel"
        android:layout_marginStart="@dimen/longAndLatLabel_marginLeft"
        android:layout_marginTop="@dimen/latLabel_marginTop"

        android:text="@string/latLabel"
        android:textSize="@dimen/coordinatesLabel_fontSize"
        />

    <TextView
        android:id="@+id/latCoordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toRightOf="@id/latLabel"
        app:layout_constraintTop_toTopOf="@id/latLabel"
        app:layout_constraintBottom_toBottomOf="@id/latLabel"
        android:layout_marginStart="@dimen/coordinates_marginLeft"

        android:textSize="@dimen/coordinates_fontSize"
        />

    <Button
        android:id="@+id/permissionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/rdtronic_orange"
        android:text="@string/requete_permission_localisation"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/bg_rdtronicLogo"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latCoordinate" />


    <ImageView
        android:contentDescription="@string/bg_rdtroniclogo_contentDescription"
        android:id="@+id/bg_rdtronicLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bgRdtronicLogo_height"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:src="@drawable/bg_rdtroniclogo"
        />

    <ImageView
        android:contentDescription="@string/rdtroniclogo_contentdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/bg_rdtronicLogo"
        app:layout_constraintTop_toTopOf="@+id/bg_rdtronicLogo"

        android:src="@drawable/rdtroniclogo"
        />


</androidx.constraintlayout.widget.ConstraintLayout>